seed_error_3.log
/home/francisco/PROYECTOS/SIGESDA/SIGESDA-BACKEND/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
prisma/seed-reglas-descuentos.ts(158,5): error TS2322: Type 'number[]' is not assignable to type 'never[]'.
  Type 'number' is not assignable to type 'never'.

    at createTSError (/home/francisco/PROYECTOS/SIGESDA/SIGESDA-BACKEND/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/francisco/PROYECTOS/SIGESDA/SIGESDA-BACKEND/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/francisco/PROYECTOS/SIGESDA/SIGESDA-BACKEND/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/francisco/PROYECTOS/SIGESDA/SIGESDA-BACKEND/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/francisco/PROYECTOS/SIGESDA/SIGESDA-BACKEND/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (/home/francisco/PROYECTOS/SIGESDA/SIGESDA-BACKEND/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2322 ]
}
